--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/frontend/src/App.jsx"></script>
+    <script type="module" src="/frontend/src/index.js"></script>
   </body>
 </html>
