--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce store</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/frontend/src/index.js"></script>
+    <script type="module" src="/frontend/src/index.jsx"></script>
   </body>
 </html>
